# asmart-test-task-backend-

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yml
config/: settings.py  urls.py
nginx/: default.conf
posts/: admin.py  api.py  models.py  schemas.py
posts/migrations/: 0001_initial.py
